[project]
name = "fplanck"
version = "1.0.0"
description = "Solve the Fokker-Planck equation in N dimensions"
authors = [
    { name = "John Parker", email = "japarker@uchicago.edu" }
]
readme = "README.md"
requires-python = ">=3.12.0"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "pre-commit>=3.5.0",
    "pyright>=1.1.336",
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E", "F", "B", "UP",
    "D", 
    "I001",
]
ignore = [
    "D107" # __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"
